Use helper_method instead of instance vars for view

--- a/app/views/sites/frames/_default.html.erb
+++ b/app/views/sites/frames/_default.html.erb
@@ -2,7 +2,7 @@
   <header>
   </header>
   <div id="main" role="main">
-    <%= yield %>
+    <%= render page.blocks %>
   </div>
   <footer>
   </footer>
