Added all kinds of partials full example working.

--- a/app/views/sites/frames/_default.html.erb
+++ b/app/views/sites/frames/_default.html.erb
@@ -1,9 +1,9 @@
-<div id="container" class="container">
+<div class="frame <%=page.frame.name%>">
   <header>
   </header>
-  <div id="main" role="main">
-    <%= render page.blocks %>
+  <div class='blocks'>
+    <%= render_blocks(page.blocks) %>
   </div>
   <footer>
   </footer>
-</div> <!--! end of #container -->
+</div>
