--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the feeds controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.frame {
+
+}
+.blocks {
+}
+
+.block {
+  float: left;
+}
+
+.puff {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+}
