--- a/app/views/sites/puffs/_default.html.erb
+++ b/app/views/sites/puffs/_default.html.erb
@@ -1,4 +1,4 @@
-<div class'puff <%= puff.name %>'>
+<div class='puff <%= puff.name %>'>
   <h1><%= article.title %></h1>
   <div><%= article.abstract %></div>
   <div>
