Fixed some more layouts

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -26,6 +26,9 @@ $visual-grid: true;
 .three .puff {
   @include span-columns(4);
 }
+.four .puff {
+  @include span-columns(3);
+}
 
 .top .puff {
   @include span-columns(12);
