--- a/app/views/sites/blocks/_one_big_and_two_small.html.erb
+++ b/app/views/sites/blocks/_one_big_and_two_small.html.erb
@@ -1,8 +1,8 @@
 <div class="block <%=block.name%>">
-  <div class="two">
+  <div class="big">
     <%= render_puff(block.puffs[0], feed.articles[0]) %>
   </div>
-  <div class="two">
+  <div class="small">
     <%= render_puff(block.puffs[1], feed.articles[1]) %>
     <%= render_puff(block.puffs[2], feed.articles[2]) %>
   </div>
